# openapi.yaml
@@ -488,8 +488,6 @@ components:
       properties:
         id:
           type: number
-        userId:
-          type: string
         content:
           type: string
         likedBy:
@@ -504,3 +502,12 @@ components:
           type: number
         parentId:
           type: number
+        user:
+          type: object
+          properties:
+            id:
+              type: string
+            name:
+              type: string
+            picture:
+              type: string
